      launch "<session_name>" in tab
      
      To open a new session in a new window:
      launch "<session_name>" in terminal
      
      The <session_name> is either the name of a stored 
      addressbook session or "default session" for a 
      default session.
      
      Here is a sample Applescript:
      
      tell application "iTerm"
	activate
	launch "default session" in tab
	launch "Fink list" in terminal
      end tell
      
      These scripts can then be save as executable scripts.
      

2003-01-31	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Fixed bug in showing cursor when going up in command 
      history
      

2003-01-30	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Removed terminal size constraints from Preferences, 
      Configuration panel, and Address Book entries. 
      Minimum size is 1x1.
      
    * We don't autoscroll to the bottom on shell output if 
      the user has scrolled up. Typing something on the 
      command line will trigger an autoscroll again.
      

2003-01-29	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Incorporated patch by Aaron Gerber to add a "Cancel" 
      button in the preferences panel.
      
    * Added preference to specify tab position:
      top, left, bottom, right
      

2003-01-27	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Refactored a lot of the addressbook menu building code.
    
    * Added addressbook menu to dock menu.
    

2003-01-25	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Address Book window now has Autosave name.
    

2003-01-24	fabian
    * Fixed a bug in VT100Terminal that causes loss of
      character sometimes
    * Fixed bug in PseudoTerminal that makes choosing
      non-ASCII font not working
      
2003-01-23	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Fixed mapping of function keys in VT100Terminal.
    

2003-01-21	fabian
    * Fixed bug in SetDoubleWidthString()
    * Fixed bug in attrString that disabled bold